[metadata]
name = PythonAMRHDF
version = attr: PythonAMRHDF.__version__
author = Håkon Strandenes
description = Python-based OverlappingAMR HDF5 reader and writer
long_description = file: README.rst
license = BSD 3-Clause License
url = https://github.com/hakostra/PythonAMRHDF
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Visualization

[options]
py_modules = PythonAMRHDF
install_requires =
    numpy
    h5py >= 3.3.0
    vtk >= 9.1.0
python_requires = >= 3.8

[options.entry_points]
console_scripts =
    PythonAMRHDF = PythonAMRHDF:main
